--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Check Go version
         run: go test -cover ./...
     
-  tests:
+  style:
     name: Style
     runs-on: ubuntu-latest
     steps:
