--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,12 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.1"
-
+      
       - name: Format Go code
         run: test -z $(go fmt ./...)
+
+      - name: Linting pass 
+        uses: dominikh/staticcheck-action@v1
+        with:
+          version: "latest"
+
