--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,8 +18,14 @@ jobs:
         with:
           go-version: "1.25.1"
 
-      - name: Check Go version
+      - name: Install gosec
+        run: go install github.com/securego/gosec/v2/cmd/gosec@latest
+
+      - name: Run through test units
         run: go test -cover ./...
+
+      - name: Check security vulnerabilites
+        run: gosec ./...
     
   style:
     name: Style
