--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,15 +9,23 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{secrets.DATABASE_URL}}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
 
+        
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.25.1"
-        
+          
+          
+      - name: Download goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
+      
       - name: Build app for script
         run: ./scripts/buildprod.sh
 
@@ -35,5 +43,8 @@ jobs:
       - name: Build image and push to Google artiifact registry
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-473320/notely-ar-repo/notely:latest .
 
+      - name: Migrate up db
+        run: ./scripts/migrateup.sh
+        
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-473320/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-473320 --max-instances=4
